[gd_scene load_steps=5 format=2]

[ext_resource path="res://characters/dwarf/gui/action-icons/ActionIcon.gd" type="Script" id=1]
[ext_resource path="res://characters/dwarf/gui/action-icons/action-icons.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "close"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 2.07053, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 3 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 0.406126, 0.517633, 0.574348, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.3, 1.2 ), Vector2( 1.4, 0.7 ), Vector2( 1, 1 ) ]
}

[node name="ActionIcon" type="Node2D"]
scale = Vector2( 1.4, 1.4 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -20 )
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/close = SubResource( 1 )
anims/open = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
